# HealthLink

./: .env.example  README.md  TROUBLESHOOTING.md  docker-compose.yml  pyproject.toml  quality_check.py  quick_test.py  requirements.txt  start_all_services.py  start_icer_engine.py  start_server.py  test_fix.py  test_icer_integration.py  test_m2_acceptance.py
config/: asr_keywords.json  database_switch.py  model_switch.py  settings.yaml
data/: healthlink.db
docs/: M2_COMPLETION_SUMMARY.md  PROJECT_STRUCTURE.md  REQUIREMENTS.md  RULES.md  openapi.yaml
healthlink/: __init__.py  cli.py
infra/docker/: Dockerfile.gateway
scripts/: README.md
services/gateway-api/: __init__.py  exceptions.py  main.py
services/gateway-api/routers/: health.py  outcomes.py  patients.py  screenings.py
services/gateway_api/: middleware.py
services/gateway_api/routers/: __init__.py  icer.py  interventions.py  patients.py
services/icer_engine/: Dockerfile  README.md
services/icer_engine/app/: __init__.py  main.py
services/icer_engine/app/routers/: __init__.py  evaluate.py
services/icer_engine/app/schemas/: __init__.py  icer.py
services/icer_engine/tests/: __init__.py  test_icer_engine.py
